added a python game in python folder named as pygame

--- a/Contributors.html
+++ b/Contributors.html
@@ -1979,7 +1979,7 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
-
+        },
         {
           "id":359,
           "fullname": "Avadhoot Kulkarni",
@@ -1990,7 +1990,12 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
+        {
+            "id":361,
+            "fullname": "Shubham Kumar",
+            "username":"https://github.com/shubham-1903"
+        },
 
     ];
 
