some fixes on contributor variable

--- a/Contributors.html
+++ b/Contributors.html
@@ -1903,9 +1903,7 @@
         "id" : 349,
         "full name": "Rajpreet Kaur",
         "username": "https://github.com/Rajpreetkaur02"
-      }
-
-      
+      },
       {
           "id": 349,
           "fullname": "Bhumit",
@@ -1979,7 +1977,7 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
-    
+        },
         {
           "id":359,
           "fullname": "Avadhoot Kulkarni",
@@ -1990,16 +1988,21 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
         {
             "id":361,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
-        }
-	{  "id:362,
-	   "fullname": "Priya Rawat"
-	   "username":	"https://github.com/Priya19999"
-	}
+        },
+        {  "id":362,
+        "fullname": "Priya Rawat",
+        "username":	"https://github.com/Priya19999"
+        },
+        { 
+            "id":363,
+            "fullname": "Ramdani Surya",
+            "username":	"https://github.com/ramdani-surya"
+        },
 
     ];
 
