added basic operations of linked list and my name

--- a/Contributors.html
+++ b/Contributors.html
@@ -1990,15 +1990,19 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
         {
             "id":361,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
-        }
-	{  "id:362,
-	   "fullname": "Priya Rawat"
-	   "username":	"https://github.com/Priya19999"
+        },
+	{  "id":362,
+	   "fullname": "Priya Rawat",
+	   "username":	"https://github.com/Priya19999",
+	},
+    {  "id":363,
+	   "fullname": "Ansh Goyal",
+	   "username":	"https://github.com/Ansh1693"
 	}
 
     ];
