--- a/Contributors.html
+++ b/Contributors.html
@@ -1903,9 +1903,7 @@
         "id" : 349,
         "full name": "Rajpreet Kaur",
         "username": "https://github.com/Rajpreetkaur02"
-      }
-
-      
+      },
       {
           "id": 349,
           "fullname": "Bhumit",
@@ -1979,27 +1977,33 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
-    
+        },
         {
           "id":359,
           "fullname": "Avadhoot Kulkarni",
           "username": "https://github.com/AvadhootK"
         },
-	{
-          "id":360,
-          "fullname": "Abiola Ayodele",
-          "username": "https://github.com/babboe1"
+	    {
+            "id":360,
+            "fullname": "Abiola Ayodele",
+            "username": "https://github.com/babboe1"
 
-        }
+        },
         {
             "id":361,
-           "fullname": "Ian Kisali",
-           "username": "https://github.com/iankisali"
+            "fullname": "Ian Kisali",
+            "username": "https://github.com/iankisali"
+        },
+        {  
+            "id":362,
+            "fullname": "Priya Rawat",
+            "username":	"https://github.com/Priya19999"
+        },
+        {
+            "id":363,
+            "fullname": "Rizal Jihadudin",
+            "username": "https://github.com/rzldin"
         }
-	{  "id:362,
-	   "fullname": "Priya Rawat"
-	   "username":	"https://github.com/Priya19999"
-	}
 
     ];
 
