--- a/Contributors.html
+++ b/Contributors.html
@@ -2000,6 +2000,11 @@
 	   "fullname": "Priya Rawat"
 	   "username":	"https://github.com/Priya19999"
 	}
+	{
+	  "id": 363,
+	  "fullname": "Aditya Priyanshu",
+	  "username": "https://github.com/Adityap-3055"
+      }
 
     ];
 
