--- a/Contributors.html
+++ b/Contributors.html
@@ -2012,7 +2012,12 @@
 	  "id": 363,
 	  "fullname": "Aditya Priyanshu",
 	  "username": "https://github.com/Adityap-3055"
-      }
+      	}
+	{
+	  "id": 364,
+	  "fullname": "Nitin K.M",
+	  "username": "https://github.com/Nitin320"
+      	}
 
 
     ];
