my-first-contribution

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,10 +1,3 @@
-
-      {
-	  "id": 348,
-	  "fullname": "Smit Shah",
-	  "username": "https://github.com/smit-sms"
-      }
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -1904,7 +1897,7 @@
         "full name": "Rajpreet Kaur",
         "username": "https://github.com/Rajpreetkaur02"
       }
-
+,
       
       {
           "id": 349,
@@ -1979,6 +1972,7 @@
           "id":358,
           "fullname": "Debdeep Ghosal",
           "username": "https://github.com/Debdeepghosal"
+        },
     
         {
           "id":359,
@@ -1990,16 +1984,20 @@
           "fullname": "Abiola Ayodele",
           "username": "https://github.com/babboe1"
 
-        }
+        },
         {
             "id":361,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
-        }
-	{  "id:362,
-	   "fullname": "Priya Rawat"
+        },
+	{  "id":362 ,
+	   "fullname": "Priya Rawat",
 	   "username":	"https://github.com/Priya19999"
-	}
+	},
+	{  "id":363,
+	   "fullname": "Daksh Singh",
+	   "username":	"https://github.com/Daksh-964"
+	},
 
     ];
 
