--- a/Contributors.html
+++ b/Contributors.html
@@ -1997,22 +1997,26 @@
             "fullname": "Shubham Kumar",
             "username":"https://github.com/shubham-1903"
         },
-
-        }
         {
             "id":361,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
-        }
-	{  "id:362,
+        },
+	{  "id":362,
 	   "fullname": "Priya Rawat"
 	   "username":	"https://github.com/Priya19999"
-	}
+	},
 	{
 	  "id": 363,
 	  "fullname": "Aditya Priyanshu",
 	  "username": "https://github.com/Adityap-3055"
+      },
+	{
+	  "id": 364,
+	  "fullname": "Umesh Singh",
+	  "username": "https://github.com/Umesh-01"
       }
+
 
 
     ];
