--- a/Contributors.html
+++ b/Contributors.html
@@ -2013,6 +2013,10 @@
 	  "fullname": "Aditya Priyanshu",
 	  "username": "https://github.com/Adityap-3055"
       }
+	  {  "id:364,
+	   "fullname": "Prathamesh Parit"
+	   "username":	"https://github.com/prathameshparit"
+	}
 
 
     ];
