--- a/Contributors.html
+++ b/Contributors.html
@@ -1998,13 +1998,10 @@
         "id":361,
         "fullname": "Aurélie Bayre",
         "username": "https://github.com/AurelieBayre"
-      }
+      },
 
-
-
-        },
           {
-          "id":1,
+          "id":362,
           "fullname": "iLorah",
           "username": "https://github.com/iLorah"
 
@@ -2013,38 +2010,43 @@
 
         },
         {
-            "id":361,
+            "id":363,
             "fullname": "Shubham Kumar",
             "username":"https://github.com/shubham-1903"
         },
         {
-            "id":361,
+            "id":364,
            "fullname": "Ian Kisali",
            "username": "https://github.com/iankisali"
         },
-	{  "id":362,
+	{  "id":365,
 	   "fullname": "Priya Rawat"
 	   "username":	"https://github.com/Priya19999"
 	},
 	{
-	  "id": 363,
+	  "id": 366,
 	  "fullname": "Aditya Priyanshu",
 	  "username": "https://github.com/Adityap-3055"
       },
 	{
-	  "id": 364,
+	  "id": 367,
 	  "fullname": "Umesh Singh",
 	  "username": "https://github.com/Umesh-01"
       },
-	  {  "id:364,
+	  {  "id:368,
 	   "fullname": "Prathamesh Parit"
 	   "username":	"https://github.com/prathameshparit"
-	}
+	},
 	{
-            "id":363,
+            "id":369,
            "fullname": "Ankur Gupta",
            "username": "https://github.com/ankurgupta007"
-        }	   
+        },
+	{
+           "id":370,
+           "fullname": "CHiGi",
+           "username": "https://github.com/imCHiGi"
+        }
 
 
 
