--- a/Contributors.html
+++ b/Contributors.html
@@ -2019,7 +2019,12 @@
                 "id": 364,
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
-            }
+            },
+	    {   
+		"id": 365,         
+                "fullname": "Harsh Jain",      
+                "username": "https://github.com/Sriver27"
+	    }
 
 
         const searchbox = document.getElementById('search');
