--- a/Contributors.html
+++ b/Contributors.html
@@ -2014,6 +2014,12 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+            {
+                "id": 365,
+                "fullname": "Shubh Rastogi",
+                "username": "https://github.com/shubhrastogi07"
+            },
+            
         ]
 
 
