Add profile to array

--- a/Contributors.html
+++ b/Contributors.html
@@ -2014,6 +2014,11 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+            {
+                "id": 364,
+                "fullname": "Casey",
+                "username": "https://github.com/caseyocampo"
+            },
         ]
 
 
