--- a/Contributors.html
+++ b/Contributors.html
@@ -2014,6 +2014,11 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+              {
+                "id": 365,
+                "fullname": "Piyush Srivastava",
+                "username": "https://github.com/piyush-sri"
+            }
         ]
 
 
