--- a/Contributors.html
+++ b/Contributors.html
@@ -2014,6 +2014,11 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+            {
+                "id": 369,
+                "fullname": "Nikhil Gautam",
+                "username": "https://github.com/nikgautamgithub"
+            }
         ]
 
 
