--- a/Contributors.html
+++ b/Contributors.html
@@ -1986,8 +1986,6 @@
                 "id": 360,
                 "fullname": "Abiola Ayodele",
                 "username": "https://github.com/babboe1"
-
-
             },
             {
                 "id": 361,
@@ -2014,6 +2012,12 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+            {
+                "id": 365,
+                "fullname": "Ganzabahl",
+                "username": "https://github.com/Ganzabahl"
+            },
+
         ]
 
 
@@ -2112,7 +2116,6 @@
                     if (item.id <= initialContributorsNumber) {
                         document.getElementById('contributors').append(user)
                     }
-
                 })
 
             document.querySelectorAll('a.box-item').forEach(con => {
