--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,7 +3828,11 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
-
+            {
+                "id": 367,
+                "fullname": "Natan Macena",
+                "username": "https://github.com/Natan7"
+            },
 
         ]
 
