--- a/Contributors.html
+++ b/Contributors.html
@@ -1942,7 +1942,12 @@
             "id": 356,
             "fullname": "Surbhi Kumari",
             "username": "https://github.com/surbhi400" 
-
+        },
+        {
+            "id": 366,
+            "fullname": "Rian",
+            "username": "https://github.com/iiiaann"
+        }
     </div>
     </div>
 
@@ -3823,6 +3828,11 @@
 
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
+            },
+            {
+                "id": 366,
+                "fullname": "Rian",
+                "username": "https://github.com/iiiaann"
             },
 
                 "fullname": "Ganzabahl",
