--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,7 +3828,12 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
-
+                
+            {
+                "id": 366, 
+                "fullname": "Nihar Wadhwa",
+                "username": "https://github.com/nihar-wadhwa"
+            },
 
         ]
 
