add kadane's algo in c++

--- a/Contributors.html
+++ b/Contributors.html
@@ -3819,6 +3819,11 @@
                 "username": "https://github.com/antheiz"
             },
             {
+                "id": 366,
+                "fullname": "piyush sagar",
+                "username": "https://github.com/piyush362"
+            }
+            {
                 "id": 365,
 
                 "fullname": "Hardik Sharma",
