Rock-Paper-Scissor game added

--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,6 +3828,10 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+            {
+                "id": 366,
+                "fullname": "Laxman kohar",
+                "username": "https://github.com/Laxmankohar"}
 
 
         ]
