Updated broken favicon with latest on from the website

--- a/Contributors.html
+++ b/Contributors.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <link rel="icon" href="https://hacktoberfestswaglist.com/img/Hacktoberfest_21.jpg" type="image/x-icon">
+    <link rel="icon" href="https://hacktoberfestswaglist.com/img/hacktoberfest-favicon.ico" type="image/x-icon">
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74296045-6"></script> -->
 
     <!--Stats Script-->
@@ -1942,9 +1942,9 @@
             "id": 356,
             "fullname": "Surbhi Kumari",
             "username": "https://github.com/surbhi400" 
-
-    </div>
-    </div>
+        },
+    
+    
 
     <footer class="footer mt-auto py-3 bg-light text-center">
         <div class="container">
