--- a/Contributors.html
+++ b/Contributors.html
@@ -3827,6 +3827,9 @@
 
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
+            {
+                "fullname": "Yash Agarwal",
+                "username": "https://github.com/yashagarwaldev"}'
             },
 
 
