Add Roman to Integer Python Program and added name in contribution list

--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,10 +3824,20 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+            {
+                "id": 367,
+
+                "fullname": "Hridhwesh Maity"
+                "username": "https://github.com/hridhwesh"
+
+
+
+
+            }
 
 
         ]
