--- a/Contributors.html
+++ b/Contributors.html
@@ -80,7 +80,7 @@
   -->
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="https://hacktoberfest.com/">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                 id="Layer_1" x="0px" y="0px" viewBox="0 0 300 300" style="enable-background:new 0 0 300 300;"
                 xml:space="preserve" role="img" aria-labelledby="dyn2wm4vin1xgraye3ggy9kf12oaz8a" class="header__logo"
