--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,7 +3824,12 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
+                "id": 370,
+                "fullname": "Vandit Bera",
+                "username": "https://github.com/vandit-bera"
+            },
+            {  
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
