Added sum of array using recursion c++ code.

--- a/Contributors.html
+++ b/Contributors.html
@@ -3829,6 +3829,12 @@
                 "username": "https://github.com/Ganzabahl"
             },
 
+            {
+                "id": 367,
+                "fullname": "Shubham Goyal",
+                "username": "https://github.com/ShubhamGoyal7125"
+            }
+
 
         ]
 
