--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,9 +3824,15 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
+                "id": 366, 
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
+            },
+            {
+                "id": 367,
+                "fullname": "Vaibhav Srivastava",
+                "username": "https://github.com/Vaibhav832"
             },
 
 
