--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,6 +3824,12 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
+         {
+                "id": 366,
+
+                "fullname": "Abhishek Singh",
+                "username": "https://github.com/kunwarabhi7"
+            },{
 
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
