--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,7 +3824,13 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
+                "id": 367,
+                "fullname": "Minh",
+                "username": "https://github.com/m-inh"
+            },
+            {
+                "id": 368,
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
