--- a/Contributors.html
+++ b/Contributors.html
@@ -1942,6 +1942,12 @@
             "id": 356,
             "fullname": "Surbhi Kumari",
             "username": "https://github.com/surbhi400" 
+        },
+        {
+            "id": 367,
+            "fullname": "Amitesh Muduli",
+            "username": "https://github.com/MrLovebiRd"
+        }
 
     </div>
     </div>
