--- a/Contributors.html
+++ b/Contributors.html
@@ -3820,14 +3820,18 @@
             },
             {
                 "id": 365,
-
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {   
+                "id": 366,
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
-            },
+            },{
+                "id": 367,
+                "fullname": "Kalbe Hussain Rizvi",
+                "username": "https://github.com/iamhussainrizvi"
+            }
 
 
         ]
