on pointer hovering the button, its background color will change

--- a/css/LoginPage.html
+++ b/css/LoginPage.html
@@ -152,6 +152,9 @@
 
         .button button:hover {
             cursor: pointer;
+            color: #1c6cd4;
+            background-color: #b3dbfc;
+            transition: .4s;
         }
     </style>
 
