update h1 style to montserrat

--- a/css/LoginPage.html
+++ b/css/LoginPage.html
@@ -23,6 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
 
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
         .logo {
 
             color: white;
@@ -155,6 +157,10 @@
             color: #1c6cd4;
             background-color: #b3dbfc;
             transition: .4s;
+        }
+
+        h1 {
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
 
