--- a/Contributors.html
+++ b/Contributors.html
@@ -3820,13 +3820,16 @@
             },
             {
                 "id": 365,
-
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
+            },
+            {
+                "fullname": "Deepanshu",
+                "username": "https://github.com/dpdp11"
             },
 
 
