--- a/Contributors.html
+++ b/Contributors.html
@@ -3829,6 +3829,12 @@
                 "username": "https://github.com/Ganzabahl"
             },
 
+            {
+                "id": 375,
+
+                "fullname": "Rahul",
+                "username": "https://github.com/rahuldotbiz"
+            },
 
         ]
 
