--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,6 +3828,12 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+            {
+                "id": 366,
+
+                "fullname": "Tharuka Wijekoon",
+                "username": "https://github.com/tharuka01"
+            },
 
 
         ]
