--- a/Contributors.html
+++ b/Contributors.html
@@ -3824,10 +3824,16 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
+                "id":366,
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+            {
+                "id":367,
+                "fullname": "Nagesh Mandal",
+                "username": "https://github.com/NageshMandal"
+            }
 
 
         ]
