--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,7 +3828,11 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
-
+            {
+                "id": 367,
+                "fullname": "Gitanjali Gore",
+                "username": "https://github.com/gitssz"
+            }
 
         ]
 
