--- a/Contributors.html
+++ b/Contributors.html
@@ -3818,16 +3818,24 @@
                 "fullname": "Theis Andatu",
                 "username": "https://github.com/antheiz"
             },
+      
             {
                 "id": 365,
 
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
-                "fullname": "Ganzabahl",
+           {
+                 "id": 366,
+                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+         {
+          "id": 367,
+          "fullname": "Bhoomika Singh",
+          "username": "https://github.com/bhumithakur"
+      },
+                
 
 
         ]
