--- a/Contributors.html
+++ b/Contributors.html
@@ -1942,6 +1942,13 @@
             "id": 356,
             "fullname": "Surbhi Kumari",
             "username": "https://github.com/surbhi400" 
+        }.
+        {
+        "id":357,
+        "fullname":"Manash Anand",
+        "username":"https://github.com/ManashAnand"
+
+        }
 
     </div>
     </div>
