--- a/Contributors.html
+++ b/Contributors.html
@@ -3828,6 +3828,11 @@
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
             },
+            {
+                "id": 366,
+                "fullname": "Ankit Raj",
+                "username": "https://github.com/ankytastic"
+            },
 
 
         ]
