--- a/Contributors.html
+++ b/Contributors.html
@@ -41,7 +41,9 @@
         crossorigin="anonymous"></script>
     <!-- Github follow button -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <link rel="stylesheet" href="./css/contributors.css">
+    <link rel="stylesheet" href="./css/
+                                 
+                                 butors.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
@@ -1942,6 +1944,12 @@
             "id": 356,
             "fullname": "Surbhi Kumari",
             "username": "https://github.com/surbhi400" 
+        },{
+            "id": 357,
+            "fullname": "Abhishek Gupta",
+            "username": "https://github.com/Abhishek-5854" 
+        },
+        
 
     </div>
     </div>
@@ -3824,9 +3832,15 @@
                 "fullname": "Hardik Sharma",
                 "username": "https://github.com/hardik302001"
             },
-
+            {
+                "id":366,
                 "fullname": "Ganzabahl",
                 "username": "https://github.com/Ganzabahl"
+            },           
+            {
+                "id":367,
+                "fullname": "Abhishek Gupta",
+                "username": "https://github.com/Abhishek-5854"
             },
 
 
