Changed px to rem units

--- a/css/LoginPage.html
+++ b/css/LoginPage.html
@@ -28,7 +28,7 @@
 
             color: white;
 
-            font-size: 50px;
+            font-size: 3.125rem;
 
         }
 
@@ -38,7 +38,7 @@
 
             background-color: #589ED9;
 
-            width: 200px;
+            width: 12.5rem;
 
             margin: 0 auto;
 
@@ -52,13 +52,13 @@
 
             width: 100%;
 
-            height: 40px;
+            height: 2.5rem;
 
             border: none;
 
-            margin-top: 10px;
+            margin-top: 0.625rem;
 
-            border-radius: 3px;
+            border-radius: 0.188rem;
 
             color: white;
 
@@ -86,7 +86,7 @@
 
             justify-content: center;
 
-            height: 50px;
+            height: 3.125rem;
 
             width: 200px;
 
@@ -94,9 +94,9 @@
 
             border: none;
 
-            margin-bottom: 2px;
+            margin-bottom: 0.125rem;
 
-            text-indent: 20px;
+            text-indent: 1.25rem;
 
         }
 
@@ -108,15 +108,15 @@
 
             justify-content: center;
 
-            height: 50px;
+            height: 3.125rem;
 
-            width: 200px;
+            width:12.5rem;
 
             border-radius: 0px 0px 10px 10px;
 
             border: none;
 
-            text-indent: 20px;
+            text-indent: 1.25rem;
 
         }
 
@@ -124,7 +124,7 @@
 
         .header {
 
-            margin-top: 150px;
+            margin-top: 9.375rem;
 
         }
 
@@ -148,7 +148,7 @@
 
             font-family: 'Work Sans', sans-serif;
 
-            font-weight: 300
+            font-weight: 300;
 
         }
 
