--- a/Contributors.html
+++ b/Contributors.html
@@ -151,6 +151,7 @@
     <footer class="footer mt-auto py-3 bg-light text-center" data-aos="zoom-in-up">
       <div class="container">
         <span class="text-muted">This Project is participating in Hacktoberfest.</span>
+        <span class="text-muted">All have to contribute in this to win Hacktoberfest swags.</span>
       </div>
     </footer>
   
