--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,7 +2024,13 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
+          },
+{
+              "id": 366,
+              "fullname": "Jill Oestreicher",
+              "username": "https://github.com/jilloestreicher"
           }
+
       ];
   
   
