--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,7 +2024,12 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+            {  "id":366,
+         "fullname": "Atinder Kumar",
+         "username":	"https://github.com/atinder11"
+      },
+            
       ];
   
   
