Added a bank ATM python program

--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,7 +2024,13 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+
+        {
+            "id": 366,
+            "fullname": "Michael Obasoro",
+            "username": "https://github.com/MickeyObas"
+        },
       ];
   
   
