making the first HacktoberFest contribution

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,11 +1,4 @@
-
-      {
-        "id": 348,
-        "fullname": "Smit Shah",
-        "username": "https://github.com/smit-sms"
-        }
-  
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
   
   <head>
@@ -2024,7 +2017,12 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+          {
+              "id": 366,
+              "fullname": "Lain",
+              "username": "https://github.com/LainWiredIn"
+          },
       ];
   
   
