--- a/Contributors.html
+++ b/Contributors.html
@@ -47,6 +47,9 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <script src="https://kit.fontawesome.com/d9f7ec7b29.js" crossorigin="anonymous"></script>
     <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
     <title>Hacktoberfest 2022 - Contributors</title>
