Added a CPP algorithm which flattens a binary tree into a linked list and also added my name into contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -2025,6 +2025,12 @@
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
           }
+          ,
+          {
+              "id": 366,
+              "fullname": "Hemanth Thota",
+              "username": "https://github.com/HemanthThota39"
+          }
       ];
   
   
