added my name in contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,9 +1,4 @@
 
-      {
-        "id": 348,
-        "fullname": "Smit Shah",
-        "username": "https://github.com/smit-sms"
-        }
   
   <!DOCTYPE html>
   <html lang="en">
@@ -1979,13 +1974,13 @@
             "id":358,
             "fullname": "Debdeep Ghosal",
             "username": "https://github.com/Debdeepghosal"
-  },
+          },
           {
             "id":359,
             "fullname": "Avadhoot Kulkarni",
             "username": "https://github.com/AvadhootK"
           },
-      {
+          {
             "id":360,
             "fullname": "Abiola Ayodele",
             "username": "https://github.com/babboe1"
@@ -2025,6 +2020,12 @@
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
           }
+            
+        {
+            "id": 366,
+            "fullname": "Karan Boro",
+            "username": "https://github.com/slothtae"
+        }
       ];
   
   
