Added my name to contributors.html
I also moved up the other contributor which was at the top to the correct position

--- a/Contributors.html
+++ b/Contributors.html
@@ -1,10 +1,3 @@
-
-      {
-        "id": 348,
-        "fullname": "Smit Shah",
-        "username": "https://github.com/smit-sms"
-        }
-  
   <!DOCTYPE html>
   <html lang="en">
   
@@ -1900,7 +1893,11 @@
             "fullname": "Srinjoy Pati",
             "username": "https://github.com/srinjoy-26"
         },
-  
+        {
+            "id": 348,
+            "fullname": "Smit Shah",
+            "username": "https://github.com/smit-sms"
+        },
         {
           "id" : 349,
           "full name": "Rajpreet Kaur",
@@ -2024,6 +2021,11 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
+          },
+          {
+              "id": 366,
+              "fullname": "Badri Krishnan A",
+              "username": "https://github.com/litebrick204"
           }
       ];
   
