--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,8 +2024,14 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+        {
+              "id":366,
+              "fullname": "Anshika Anand",
+              "username":"https://github.com/AnshikaAnand222"
+        },
       ];
+         
   
   
       const searchbox = document.getElementById('search');
