--- a/Contributors.html
+++ b/Contributors.html
@@ -2006,6 +2006,10 @@
          "fullname": "Priya Rawat",
          "username":	"https://github.com/Priya19999"
       },
+     {  "id":362,
+         "fullname": "Adriraj Sachan",
+         "username":	"https://github.com/Andy-404"
+      },
       {
         "id": 363,
         "fullname": "Aditya Priyanshu",
