--- a/Contributors.html
+++ b/Contributors.html
@@ -2020,11 +2020,17 @@
          "fullname": "Prathamesh Parit",
          "username":	"https://github.com/prathameshparit"
       },
+            
           {
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+                    {
+            "id": 366,
+            "fullname": "Anurag Kumar",
+            "username": "https://github.com/anuragkmr45"
+        },
       ];
   
   
