--- a/Contributors.html
+++ b/Contributors.html
@@ -1968,29 +1968,25 @@
             "fullname": "Shivam",
             "username": "https://github.com/shivamRamani"
           },
-            {
-  
+          {
             "id":357,
             "fullname": "Nabeel Hussain M N",
             "username": "https://github.com/nabeel001"
           },
-  
           {
             "id":358,
             "fullname": "Debdeep Ghosal",
             "username": "https://github.com/Debdeepghosal"
-  },
+          },
           {
             "id":359,
             "fullname": "Avadhoot Kulkarni",
             "username": "https://github.com/AvadhootK"
           },
-      {
+          {
             "id":360,
             "fullname": "Abiola Ayodele",
             "username": "https://github.com/babboe1"
-  
-  
           },
           {
               "id":361,
@@ -2002,28 +1998,35 @@
              "fullname": "Ian Kisali",
              "username": "https://github.com/iankisali"
           },
-      {  "id":362,
-         "fullname": "Priya Rawat",
-         "username":	"https://github.com/Priya19999"
-      },
-      {
-        "id": 363,
-        "fullname": "Aditya Priyanshu",
-        "username": "https://github.com/Adityap-3055"
-        },
-      {
-        "id": 364,
-        "fullname": "Umesh Singh",
-        "username": "https://github.com/Umesh-01"
-        },
-        {  "id":364,
-         "fullname": "Prathamesh Parit",
-         "username":	"https://github.com/prathameshparit"
-      },
+          {  
+            "id":362,
+            "fullname": "Priya Rawat",
+            "username":	"https://github.com/Priya19999"
+          },
           {
-              "id": 365,
-              "fullname": "Arnold Daniels",
-              "username": "https://github.com/ImArnoldDCODES"
+            "id": 363,
+            "fullname": "Aditya Priyanshu",
+            "username": "https://github.com/Adityap-3055"
+          },
+          {
+            "id": 364,
+            "fullname": "Umesh Singh",
+            "username": "https://github.com/Umesh-01"
+          },
+          {  
+            "id":364,
+            "fullname": "Prathamesh Parit",
+            "username":	"https://github.com/prathameshparit"
+          },
+          {
+            "id": 365,
+            "fullname": "Arnold Daniels",
+            "username": "https://github.com/ImArnoldDCODES"
+          },
+          {
+            "id": 366,
+            "fullname": "Sumant Chaudhary",
+            "username": "https://github.com/sumant7"
           }
       ];
   
