--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,6 +2024,10 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
+          },{
+            "id":366,
+            "fullname":"Suman Kumar",
+            "username":"https://github.com/imSuMN"
           }
       ];
   
