Added OTP Generator Frontend Project

--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,7 +2024,12 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+          {
+            "id":366,
+            "fullname": "Mohamed Ihsan",
+            "username": "https://github.com/pmihsan"
+        }
       ];
   
   
