Added Footer and styled website

--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,6 +2024,11 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
+          },
+          {
+              "id": 366,
+              "fullname": "Sandeep Neeli",
+              "username": "https://github.com/Sandyy07"
           }
       ];
   
