--- a/Contributors.html
+++ b/Contributors.html
@@ -2024,7 +2024,11 @@
               "id": 365,
               "fullname": "Arnold Daniels",
               "username": "https://github.com/ImArnoldDCODES"
-          }
+          },
+          {  "id":366,
+            "fullname": "Abhishek Singh",
+            "username": "https://github.com/Abhivic000"
+           }
       ];
   
   
