--- a/Contributors.html
+++ b/Contributors.html
@@ -2025,6 +2025,11 @@
         "id": 365,
         "fullname": "Arnold Daniels",
         "username": "https://github.com/ImArnoldDCODES"
+      },
+      {
+        "id": 366,
+        "fullname": "Saulo Barros",
+        "username": "https://github.com/DinoSaulo"
       }
       ];
   
